feat: 更新网站标题和图标，添加SEO优化

--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/logo-transparent.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Sail Express - 专业寿司食材批发</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Sail Express - 专业海鲜及日餐食材批发供应商，为纽约上州、滨州、费城、康州等地区餐厅提供优质食材配送服务。"
+    />
+    <meta
+      name="keywords"
+      content="海鲜批发,日餐食材,寿司食材,餐厅配送,纽约食材供应商"
+    />
+    <meta name="author" content="Sail Express" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Sail Express - 专业寿司食材批发" />
+    <meta
+      property="og:description"
+      content="专业海鲜及日餐食材批发供应商，为餐厅提供优质食材配送服务。"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/src/assets/logo-transparent.png" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sail Express - 专业寿司食材批发" />
+    <meta
+      name="twitter:description"
+      content="专业海鲜及日餐食材批发供应商，为餐厅提供优质食材配送服务。"
+    />
+    <meta name="twitter:image" content="/src/assets/logo-transparent.png" />
   </head>
   <body>
     <div id="root"></div>
